add week0 beatles'

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
           <img src="./rsrc/icons/nas/NASUI.png" class="icon" />
           <span class="branding-bar">NAS UI</span>
         </a>
-        <a href="http://karamajaj.nl:880/" data-role="tile" class="bg-cyan fg-white" target="_blank">
+        <a href="http://karamajaj.nl/HYF/week0/index.html" data-role="tile" class="bg-cyan fg-white" target="_blank">
           <span class="mif-table icon"></span>
-          <span class="branding-bar">empty</span>
+          <span class="branding-bar">The Beatles</span>
         </a>
         <a href="http://karamajaj.nl:8080/downloadstation/" data-role="tile" data-size="small" class="col-3 row-5"
           target="_blank">
