--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
         <div data-role="tile" data-size="small" class="bg-brown fg-white col-2 row-6">
           <span class="mif-wind icon"></span>
         </div>
-        <div data-role="tile" class="bg-cyan fg-white">
-          <span class="mif-table icon"></span>
-          <span class="branding-bar">Documentation</span>
-        </div>
-      </div>
+<a href="http://karamajaj.nl/HYF/week0/index.html" data-role="tile" class="bg-cyan fg-white" target="_blank">
+<img src="./rsrc/icons/general/beatles-icon.png" class="icon" />
+          <span class="branding-bar">The Beatles</span>
+        </a>
+             </div>
 
       <div class="tiles-grid tiles-group size-2 fg-white" data-group-title="NAS">
         <a href="http://karamajaj.nl:8080/containerstation/#!/splash" data-role="tile" class="bg-indigo fg-white"
