added wikipedia icon

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <span class="mif-windows icon"></span>
                 </div>
                 <a href="http://karamajaj.nl:4002/" data-role="tile" data-size="small" class="bg-brown fg-white col-2 row-6" target="_blank">
-                    <span class="mif-wind icon"></span>
+                    <span class="mif-wikipedia icon"></span>
                 </a>
 
                 <a href="http://karamajaj.nl/HYF/week0/index.html" data-role="tile" class="bg-cyan fg-white" target="_blank">
