--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 
   <link href="../../metro/css/metro-all.css?ver=@@b-version" rel="stylesheet" />
   -->
+
+    <!-- Hotjar Tracking Code for http://karamajaj.nl/ -->
+    <script>
+        (function(h, o, t, j, a, r) {
+            h.hj = h.hj || function() {
+                (h.hj.q = h.hj.q || []).push(arguments)
+            };
+            h._hjSettings = {
+                hjid: 1793071,
+                hjsv: 6
+            };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script');
+            r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
     <link href="start.css" rel="stylesheet" />
 
     <link rel="icon" href="./rsrc/icons/main/website2.png">
