--- a/index.html
+++ b/index.html
@@ -183,6 +183,42 @@
         </a> -->
             </div>
 
+
+            <div class="tiles-grid tiles-group size-2 fg-white" data-group-title="ESXi">
+                <a href="http://karamajaj.nl:8090/" data-role="tile" class="bg-indigo fg-white" target="_blank">
+                    <img src="./rsrc/icons/nas/containerstation.png" class="icon" />
+                    <span class="branding-bar">Confluence</span>
+                </a>
+                <a href="http://karamajaj.nl:32400/" data-role="tile" class="bg-cyan fg-white" target="_blank">
+                    <img src="./rsrc/icons/nas/filestation.png" class="icon" />
+                    <span class="branding-bar">Plex</span>
+                </a>
+                <a href="http://karamajaj.nl:/" data-role="tile" class="bg-orange fg-white" data-size="wide" target="_blank">
+                    <img src="./rsrc/icons/nas/NASUI.png" class="icon" />
+                    <span class="branding-bar">ESXi lab</span>
+                </a>
+                <a href="https://karamajaj.nl:4008/" data-role="tile" class="bg-cyan fg-white" target="_blank">
+                    <span class="mif-table icon"></span>
+                    <span class="branding-bar">Next Cloud</span>
+                </a>
+                <a href="http://karamajaj.nl:8080/downloadstation/" data-role="tile" data-size="small" class="col-3 row-5" target="_blank">
+                    <img src="./rsrc/icons/nas/downloadstation.png" class="icon" />
+                    <!-- <span class="branding-bar">Download Station</span> -->
+                </a>
+                <a href="http://karamajaj.nl:8080/musicstation/" data-role="tile" data-size="small" class="bg-red fg-white col-4 row-5" target="_blank">
+                    <img src="./rsrc/icons/nas/musicstation.png" class="icon" />
+                    <!-- <span class="branding-bar">Music Station</span> -->
+                </a>
+                <a href="http://karamajaj.nl:8080/apps/qumagie/" data-role="tile" data-size="small" class="bg-teal fg-white col-3 row-6" target="_blank">
+                    <img src="./rsrc/icons/nas/qumagie.png" class="icon" />
+                    <!-- <span class="branding-bar">QuMagie</span> -->
+                </a>
+                <a href="http://karamajaj.nl:8080/owncloud/" data-role="tile" data-size="small" class="bg-brown fg-white col-4 row-6" target="_blank">
+                    <img src="./rsrc/icons/nas/owncloud.png" class="icon" />
+                    <!-- <span class="branding-bar">OwnCloud</span> -->
+                </a>
+            </div>
+
             <div class="tiles-grid tiles-group size-2 fg-white" data-group-title="General">
                 <a href="https://github.com/olton/Metro-UI-CSS" data-role="tile" class="bg-indigo fg-white">
                     <span class="mif-github icon"></span>
