--- a/index.html
+++ b/index.html
@@ -32,21 +32,27 @@
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
 
-<!-- Matomo -->
-<script type="text/javascript">
-  var _paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//karamajaj.nl:81/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '2']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Matomo Code -->
+    <!-- Matomo -->
+    <script type="text/javascript">
+        var _paq = window._paq || [];
+        /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+        _paq.push(['trackPageView']);
+        _paq.push(['enableLinkTracking']);
+        (function() {
+            var u = "//karamajaj.nl:81/";
+            _paq.push(['setTrackerUrl', u + 'matomo.php']);
+            _paq.push(['setSiteId', '2']);
+            var d = document,
+                g = d.createElement('script'),
+                s = d.getElementsByTagName('script')[0];
+            g.type = 'text/javascript';
+            g.async = true;
+            g.defer = true;
+            g.src = u + 'matomo.js';
+            s.parentNode.insertBefore(g, s);
+        })();
+    </script>
+    <!-- End Matomo Code -->
 
 
 
@@ -185,19 +191,19 @@
 
 
             <div class="tiles-grid tiles-group size-2 fg-white" data-group-title="ESXi">
-                <a href="http://karamajaj.nl:8090/" data-role="tile" class="bg-indigo fg-white" target="_blank">
+                <a href="https://karam-confluence.atlassian.net/wiki/spaces/HOME/pages" data-role="tile" class="bg-indigo fg-white" target="_blank">
                     <img src="./rsrc/icons/nas/containerstation.png" class="icon" />
-                    <span class="branding-bar">Confluence</span>
+                    <span class="branding-bar">Confluence HOME</span>
                 </a>
-                <a href="http://karamajaj.nl:32400/" data-role="tile" class="bg-cyan fg-white" target="_blank">
+                <a href="https://karam-confluence.atlassian.net/wiki/spaces/WORK/overview" data-role="tile" class="bg-cyan fg-white" target="_blank">
                     <img src="./rsrc/icons/nas/filestation.png" class="icon" />
-                    <span class="branding-bar">Plex</span>
+                    <span class="branding-bar">Confluence WORK</span>
                 </a>
                 <a href="http://karamajaj.nl:/" data-role="tile" class="bg-orange fg-white" data-size="wide" target="_blank">
                     <img src="./rsrc/icons/nas/NASUI.png" class="icon" />
                     <span class="branding-bar">ESXi lab</span>
                 </a>
-                <a href="https://karamajaj.nl:4008/" data-role="tile" class="bg-cyan fg-white" target="_blank">
+                <a href="http://karamajaj.nl:4005/" data-role="tile" class="bg-cyan fg-white" target="_blank">
                     <span class="mif-table icon"></span>
                     <span class="branding-bar">Next Cloud</span>
                 </a>
@@ -252,71 +258,6 @@
                 </div>
             </div>
 
-            <div class="tiles-grid tiles-group size-2 fg-white" data-group-title="General">
-                <a href="https://github.com/olton/Metro-UI-CSS" data-role="tile" class="bg-indigo fg-white">
-                    <span class="mif-github icon"></span>
-                    <span class="branding-bar">Github</span>
-                    <span class="badge-bottom">30</span>
-                </a>
-                <div data-role="tile" class="bg-cyan fg-white">
-                    <span class="mif-envelop icon"></span>
-                    <span class="branding-bar">Email</span>
-                    <span class="badge-bottom">10</span>
-                </div>
-                <div data-role="tile" class="bg-orange fg-white" data-size="wide">
-                    <span class="mif-chrome icon"></span>
-                    <span class="branding-bar">Chrome</span>
-                </div>
-                <div data-role="tile" data-size="small">
-                    <span class="mif-apple icon"></span>
-                </div>
-                <div data-role="tile" data-size="small" class="bg-red fg-white">
-                    <span class="mif-bell icon"></span>
-                </div>
-                <div data-role="tile" data-size="small" class="bg-teal fg-white col-1 row-6">
-                    <span class="mif-windows icon"></span>
-                </div>
-                <div data-role="tile" data-size="small" class="bg-brown fg-white col-2 row-6">
-                    <span class="mif-wind icon"></span>
-                </div>
-                <div data-role="tile" class="bg-cyan fg-white">
-                    <span class="mif-table icon"></span>
-                    <span class="branding-bar">Tables</span>
-                </div>
-            </div>
-
-            <div class="tiles-grid tiles-group size-2 fg-white" data-group-title="General">
-                <a href="https://github.com/olton/Metro-UI-CSS" data-role="tile" class="bg-indigo fg-white">
-                    <span class="mif-github icon"></span>
-                    <span class="branding-bar">Github</span>
-                    <span class="badge-bottom">30</span>
-                </a>
-                <div data-role="tile" class="bg-cyan fg-white">
-                    <span class="mif-envelop icon"></span>
-                    <span class="branding-bar">Email</span>
-                    <span class="badge-bottom">10</span>
-                </div>
-                <div data-role="tile" class="bg-orange fg-white" data-size="wide">
-                    <span class="mif-chrome icon"></span>
-                    <span class="branding-bar">Chrome</span>
-                </div>
-                <div data-role="tile" data-size="small">
-                    <span class="mif-apple icon"></span>
-                </div>
-                <div data-role="tile" data-size="small" class="bg-red fg-white">
-                    <span class="mif-bell icon"></span>
-                </div>
-                <div data-role="tile" data-size="small" class="bg-teal fg-white col-1 row-6">
-                    <span class="mif-windows icon"></span>
-                </div>
-                <div data-role="tile" data-size="small" class="bg-brown fg-white col-2 row-6">
-                    <span class="mif-wind icon"></span>
-                </div>
-                <div data-role="tile" class="bg-cyan fg-white">
-                    <span class="mif-table icon"></span>
-                    <span class="branding-bar">Tables</span>
-                </div>
-            </div>
 
         </div>
 
